manifests/environments/uat/triqui-client/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: triqui-class
spec:
  controller: triqui.io/ingress-nginx
